<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="hms_abort">Stop</string>
    <string name="hms_abort_message">Stop downloading?</string>
    <string name="hms_bindfaildlg_message">%1$s is unable to use Huawei Mobile Services. Please launch Phone Manager or go to Settings, enable all permissions for %2$s (including auto-launch and secondary launch), and try again.</string>
    <string name="hms_cancel">Cancel</string>
    <string name="hms_check_failure">Failed to check for updates.</string>
    <string name="hms_check_no_update">You are already using the latest version.</string>
    <string name="hms_checking">Checking for updates…</string>
    <string name="hms_confirm">OK</string>
    <string name="hms_download_failure">Failed to download Huawei Mobile Services package.</string>
    <string name="hms_download_no_space">Not enough free space. Download cannot be completed.</string>
    <string name="hms_download_retry">Download failed. Try again?</string>
    <string name="hms_downloading">"Downloading Huawei Mobile Services
progress: %d%%"</string>
    <string name="hms_downloading_new">Downloading HMS</string>
    <string name="hms_install">Install</string>
    <string name="hms_install_message">Huawei Mobile Services must be installed to use this feature. Install?</string>
    <string name="hms_retry">Retry</string>
    <string name="hms_update">Update</string>
    <string name="hms_update_message">Update to the latest version of Huawei Mobile Services to use this feature. Update now?</string>
    <string name="hms_update_message_new">"This service requires the latest version of the following app:

%1$s"</string>
    <string name="hms_update_title">Huawei Mobile Services</string>
    <string name="string_haitao_allshop">全部商品</string>
    <string name="string_haitao_type">分类搜索</string>
    <string name="string_haitao_youhui">海淘优惠</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="MSG_CONNECTION_ERR">连接失败，请检查下你的网络</string>
    <string name="MSG_LOGIN_ERR">登录验证错误。</string>
    <string name="MSG_NO_AVAILABLE_NET">连接失败，请检查下你的网络</string>
    <string name="MSG_QUIT">确定要退出虎扑吗？</string>
    <string name="MSG_TIME_OUT">获取数据超时，请重试</string>
    <string name="STR_BACK">返回</string>
    <string name="STR_CANCEL">取消</string>
    <string name="STR_CONFIRM">确定</string>
    <string name="STR_CONNECTING">数据请求中，请稍后...</string>
    <string name="STR_ERR">错误</string>
    <string name="STR_ERR_MSG">错误信息</string>
    <string name="STR_PLAYER">球员</string>
    <string name="STR_QUIT">退出</string>
    <string name="STR_RETRY">重试</string>
    <string name="STR_ROLE">位置</string>
    <string name="STR_ROTATION">旋转为横屏</string>
    <string name="STR_ROTATION_TIPS">横屏可以查看更多统计数据。（请确保您已开启自动旋转）</string>
    <string name="STR_SALARY">薪水(美元)</string>
    <string name="STR_SAVE">保存</string>
    <string name="STR_SENT">发送</string>
    <string name="STR_SET">设置</string>
    <string name="STR_TITLE_NEWS">新闻详情</string>
    <string name="TITLE_QUIT">退出程序</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about">关于我们</string>
    <string name="about_qr_code">扫描二维码，推荐朋友下载虎扑App！</string>
    <string name="about_www">www.hupu.com</string>
    <string name="account_login_name_null">用户名为空</string>
    <string name="account_login_password_null">密码为空</string>
    <string name="action_settings">Settings</string>
    <string name="add_tag">添加标签</string>
    <string name="addition_content_title">补充内容</string>
    <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
    <string name="alisdk_message_10008_type">E</string>
    <string name="alisdk_message_10009_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10009_message">查询订单出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10009_name">QUERY_ORDER_RESULT_EXCEPTION</string>
    <string name="alisdk_message_10009_type">E</string>
    <string name="alisdk_message_14_message">调用外部API传入参数为null，请加入参数再试</string>
    <string name="alisdk_message_17_action" />
    <string name="alisdk_message_17_message">不能获取类名为 {0}，过滤条件为 {1} 的服务</string>
    <string name="alisdk_message_17_name">SERVICE_NOT_AVAILABLE_ERROR</string>
    <string name="alisdk_message_17_type">E</string>
    <string name="alisdk_message_801_action">请调整参数后重试当前操作</string>
    <string name="alisdk_message_801_message">商品数量必须为整数并大于 0</string>
    <string name="alisdk_message_801_name">QUANTITY_FORMAT_ERROR</string>
    <string name="alisdk_message_801_type">E</string>
    <string name="alisdk_message_802_action">请修改传入的淘客 pid，如不确认，请联系淘客相关人员</string>
    <string name="alisdk_message_802_message">当前传入的淘客 pid {0} 非法，正确格式应以 mm_ 为前缀</string>
    <string name="alisdk_message_802_name">INVALID_TAOKE_PID_ERROR</string>
    <string name="alisdk_message_802_type">E</string>
    <string name="alisdk_message_803_action">请在初始化之前调用 TradeConfigs.defaultTaokePid=mm_**** 设置默认的淘客 pid 值, 此值会在相关方法调用时未指定 pid 时使用</string>
    <string name="alisdk_message_803_message">未设置默认的淘客 pid</string>
    <string name="alisdk_message_803_name">INVALID_DEFAULT_TAOKE_PID</string>
    <string name="alisdk_message_803_type">W</string>
    <string name="alisdk_message_804_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_804_message">使用支付宝支付失败，支付宝错误码为 8000, 含义为正在处理中</string>
    <string name="alisdk_message_804_name">PAY_IN_PROGRESS</string>
    <string name="alisdk_message_804_type">E</string>
    <string name="alisdk_message_805_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_805_message">使用支付宝支付失败，支付宝错误码为 4000, 含义为订单支付失败</string>
    <string name="alisdk_message_805_name">PAY_ORDER_FAILED</string>
    <string name="alisdk_message_805_type">E</string>
    <string name="alisdk_message_806_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_806_message">使用支付宝支付失败，支付宝错误码为 6001, 含义为用户中途取消</string>
    <string name="alisdk_message_806_name">PAY_USER_CANCEL</string>
    <string name="alisdk_message_806_type">E</string>
    <string name="alisdk_message_807_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_807_message">使用支付宝支付失败，支付宝错误码为 6002, 含义为网络连接出错</string>
    <string name="alisdk_message_807_name">PAY_NETWORK_FAILED</string>
    <string name="alisdk_message_807_type">E</string>
    <string name="alisdk_message_808_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_808_message">使用支付宝支付失败，支付宝错误码为 {0}</string>
    <string name="alisdk_message_808_name">PAY_COMMON_ERROR</string>
    <string name="alisdk_message_808_type">E</string>
    <string name="alisdk_message_809_message">使用Apliay SDK调用方法失败，请下载最新的ApliaySDK lib包或者使用H5方式付款</string>
    <string name="aliusersdk_network_error">亲，您的手机网络不太顺畅喔~</string>
    <string name="aliusersdk_session_error">亲，你的操作已超时，请重试</string>
    <string name="all_guess_rank">总排行</string>
    <string name="all_replys_txt">全部评论</string>
    <string name="already_nothing">还没有浏览记录</string>
    <string name="analyze_title">分析</string>
    <string name="anchor_btn_down_description">向下按钮描述</string>
    <string name="bet_double">倍</string>
    <string name="bet_other">其他金额</string>
    <string name="bet_other_hint">输入倍数</string>
    <string name="buy_caipiao_title">购买彩票</string>
    <string name="cancel">取消</string>
    <string name="company_reg">Copyright by 虎扑JRs &amp; 虎扑</string>
    <string name="company_reg_protocol">虎扑用户协议(含隐私政策)</string>
    <string name="done">完成</string>
    <string name="market_value">身价(欧元)</string>
    <string name="notify_game">比赛在开赛、进球、结束时通知</string>
    <string name="notify_lighted">有人点亮我</string>
    <string name="notify_lighted_tip">发布的评论被点亮时通知</string>
    <string name="notify_news">关注队伍的重要新闻</string>
    <string name="notify_recommand3">要闻通知</string>
    <string name="notify_recommand_tip">有重要新闻或精选内容时通知</string>
    <string name="offical">制服组</string>
    <string name="rate_hint">输入评论(选填)</string>
    <string name="select_teams_frist_dialog_text">「主队」是一串如数家珍的名字和数据，是声嘶力竭加油的原因，是无论胜利还是失败都不离不弃的陪伴。选择你的「主队」，不再错过他的任何消息</string>
    <string name="select_teams_frist_dialog_title">点击选择你的主队</string>
    <string name="select_teams_init">选择你的主队</string>
    <string name="submit_confirm">确认参与</string>
    <string name="team_player_attack">助攻</string>
    <string name="team_player_ball_in">进球</string>
    <string name="title_current_coin">当前虎扑币:</string>
    <string name="title_echange_goldbean_num">购买多少金豆？</string>
    <string name="title_exchange_content">虎扑币和金豆的购买率为1:1，即1虎扑币可购买1金豆</string>
    <string name="title_exchange_name">购买</string>
    <string name="title_goldbean_hint">输入整数...</string>
    <string name="title_my_pay">购买金豆</string>
    <string name="title_notify">推送通知</string>
    <string name="title_rate">我来评分</string>
    <string name="txt_agreement">我已经阅读并同意</string>
    <string name="txt_agreement_link">彩票用户协议</string>
</resources>