<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="?v0_main_bg_color_1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_title_bar" style="@style/bg_title_bar">
        <TextView android:id="@id/txt_title" android:text="@string/select_teams_init" style="@style/txt_title" />
        <Button android:id="@id/btn_done" android:text="@string/done" style="@style/btn_right_txt_red" />
    </RelativeLayout>
    <include android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/layout_title_bar" layout="@layout/layout_follow_team_new_include" />
    <RelativeLayout android:id="@id/frist_guide_dialog_layout" android:background="@color/exciting_color" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="75.0dip" android:layout_marginTop="110.0dip" android:layout_marginRight="15.0dip">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:src="@drawable/icon_guide_arrow" />
            <TextView android:textSize="16.0sp" android:textColor="?main_color_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="15.0dip" android:text="@string/select_teams_frist_dialog_title" />
            <TextView android:textSize="14.0sp" android:textColor="?main_color_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_teams_frist_dialog_text" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>