<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_title_bar" android:layout_width="fill_parent" style="@style/bg_title_bar">
        <Button android:id="@id/btn_back" style="@style/btn_back" />
        <TextView android:id="@id/txt_title" android:text="@string/title_rate" style="@style/txt_title" />
        <Button android:id="@id/btn_send" android:text="@string/STR_SENT" style="@style/btn_right_txt" />
    </RelativeLayout>
    <RelativeLayout android:background="?main_color_3" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textColor="?main_color_5" android:id="@id/txt_player_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="lbj" />
        <RatingBar android:id="@id/ratingBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="15.0dip" android:numStars="10" android:rating="0.0" android:stepSize="1.0" android:layout_below="@id/txt_player_name" style="@style/MyRatingBar" />
        <EditText android:gravity="center|left|top" android:id="@id/edt_rating_text" android:layout_height="120.0dip" android:hint="@string/rate_hint" android:layout_below="@id/ratingBar" style="@style/common_txt_edit" />
        <TextView android:textColor="?main_color_5" android:id="@id/txt_nums" android:background="?user_rating_post_alert" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:layout_marginBottom="12.0dip" android:text="500字" android:layout_alignBottom="@id/edt_rating_text" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>